<resources>
    <string name="app_name">Mecut</string>
    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="language">Language</string>

    <string name="permission">Permission</string>
    <string name="yes">Yes</string>
    <string name="tv_cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="continue2">Continue</string>
    <string name="storage">Storage</string>
    <string name="notifications">Notifications</string>
    <string name="new_project">New Project</string>
    <string name="cut_video">Cut Video</string>
    <string name="merge_video">Merge Video</string>
    <string name="draft">Draft</string>
    <string name="you_don_t_have_any_drafts_yet">You don\'t have any drafts yet</string>
    <string name="rate_us_ed">You\'ve already voted!</string>
    <string name="one_start_title">Oh, no!</string>
    <string name="four_start_title">We love you too!</string>
    <string name="zero_star_title">Do you like the app?</string>
    <string name="one_start">Please give us some feedback</string>
    <string name="four_start">Thanks for your feedback</string>
    <string name="zero_star">Let us know your experience</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="you_have_not_selected_anything_yet">You have not selected anything yet</string>
    <string name="allow">Allow</string>
    <string name="request_permission_to_use_notifications_to_notify_you">to access Photos, Media and Files on your device</string>
    <string name="intro1">Powerful Video Editor</string>
    <string name="intro2"><![CDATA[Music & Sound]]></string>
    <string name="intro3"><![CDATA[Text & Sticker]]></string>
    <string name="reques_storage">We need exclusive write permission to use the app\'s functions.</string>
    <string name="content_dialog_record">We need push notification permission to be able to use the app\'s functions.</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="policy">Privacy Policy</string>
    <string name="recent">Recent</string>
    <string name="apply">Apply</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="select_at_least_1_item">Select at least 2 items</string>
    <string name="clear_all">Clear All</string>
    <string name="no_videos_have_been_selected_yet">No videos have been selected yet</string>
    <string name="item_selected">items selected</string>
    <string name="edit_video">Edit Image</string>
    <string name="filter">Filter</string>
    <string name="speed">Speed</string>
    <string name="sticker">Sticker</string>
    <string name="text">Text</string>
    <string name="music">Music</string>
    <string name="frame">Frame</string>
    <string name="you_have_no_choice_yet">You have no choice yet.</string>
    <string name="transition">Transition</string>
    <string name="replace">Replace</string>
    <string name="delete">Delete</string>
    <string name="mute">Mute</string>
    <string name="you_cannot_select_more_than_10_items">You cannot select more than 10 items</string>
    <string name="text_color">Text Color</string>
    <string name="background">Background</string>
    <string name="border">Border</string>
    <string name="none">None</string>
    <string name="noir">Noir</string>
    <string name="warm">Warm</string>
    <string name="sepia">Sepia</string>
    <string name="cold">Cold</string>
    <string name="classic">Classic</string>
    <string name="monochrome">Monochrome</string>
    <string name="green">Green</string>
    <string name="total">Total</string>
    <string name="adjust">Adjust</string>
    <string name="exporting_video">Exporting Video...</string>
    <string name="project_saving_on_your_device">Project saving on your device</string>
    <string name="please_do_not_lock_screen_or_switch_to_other_apps">Please do not lock screen or switch to other apps</string>
    <string name="merge_failed">Save failed</string>
    <string name="merge_successful">Save successful</string>
    <string name="save_successfully">Save successfully</string>
    <string name="saved_to_device_and_projects">Saved to device and projects</string>
    <string name="home">Home</string>
    <string name="trim">Trim</string>
    <string name="cut">Cut</string>
    <string name="delete_all">Delete All</string>
    <string name="you_have_not_selected_any_items_yet">You have not selected any items yet.</string>
    <string name="do_you_want_to_delete_selected_project">Do you want to delete selected project?</string>
    <string name="you_have_not_selected_text">You have not selected text</string>
    <string name="android">Android</string>
    <string name="color">Color</string>
    <string name="cute">Cute</string>
    <string name="fade">Fade</string>
    <string name="push">Push</string>
    <string name="wipe">Wipe</string>
    <string name="split">Split</string>
    <string name="shape">Shape</string>
    <string name="cover">Cover</string>
    <string name="flash">Flash</string>
    <string name="clock">Clock</string>
    <string name="box">Box</string>
    <string name="zoom">Zoom</string>
    <string name="pan">Pan</string>
    <string name="rotate">Rotate</string>
    <string name="window">Window</string>
    <string name="honeycomb">Honeycomb</string>
    <string name="gallery">Gallery</string>
    <string name="checkerboard">Checkerboard</string>
    <string name="comb">Comb</string>
    <string name="dissolve">Dissolve</string>
    <string name="zoom_in_out_to_adjust_time">Zoom in - out to adjust time</string>
    <string name="you_have_not_cut_the_video">You have not cut the video</string>
    <string name="must_select_more_than_1_item">Must select more than 1 item</string>
    <string name="you_cannot_delete_the_selected_item">You cannot delete the selected item.</string>
    <string name="create_name">Create Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="file_already_exists">File already exists</string>
    <string name="create_failed">Create failed</string>
    <string name="create_success">Create success</string>
    <string name="please_enter_name">Name cannot be empty</string>
    <string name="unmute">Unmute</string>
    <string name="duration">Duration</string>
    <string name="no_less_than_2_videos">No less than 2 videos</string>
</resources>