<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/be_vietnapro_bold"
            android:gravity="center"
            android:text="@string/exporting_video"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bevietnampro_light"
            android:gravity="center"
            android:text="@string/project_saving_on_your_device"
            android:textColor="#99FFFFFF"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView8"
            tools:layout_editor_absoluteX="24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv"
            android:layout_width="210dp"
            android:layout_height="360dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView9"
            android:layout_marginTop="24dp"
            android:alpha="0.4" />

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:indeterminateOnly="true"
            app:layout_constraintBottom_toBottomOf="@+id/imv"
            app:layout_constraintEnd_toEndOf="@+id/imv"
            app:layout_constraintStart_toStartOf="@+id/imv"
            app:layout_constraintTop_toTopOf="@+id/imv" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            app:layout_constraintTop_toBottomOf="@id/imv"
            android:layout_marginTop="16dp"
            android:text="@string/please_do_not_lock_screen_or_switch_to_other_apps"
            android:gravity="center"
            android:textColor="#99FFFFFF"
            android:textSize="12sp"
            android:fontFamily="@font/bevietnampro_light"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>