<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_card_border_1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bevietnampro_medium"
                android:text="@string/create_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/bg_delete"
                android:drawableEnd="@drawable/delete"
                android:ellipsize="end"
                android:fontFamily="@font/inter_regular"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:textSize="16sp"
                    android:fontFamily="@font/bevietnampro_medium"
                    android:textColor="@color/white"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                    android:textSize="16sp"
                    android:fontFamily="@font/bevietnampro_medium"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/bg_card_border3"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>