<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_border_rate"
            android:layout_marginHorizontal="32dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvAvtRate"
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_rate_five"
                android:layout_marginTop="28dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imvAvtRate"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/four_start_title"
                android:textColor="@color/text_title_rate"
                android:freezesText="true"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/text_content_rate"
                android:text="@string/four_start"
                android:freezesText="true"/>
            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srb_numStars="0"
                app:srb_minimumStars="0"
                app:srb_rating="0"
                app:srb_starWidth="30dp"
                app:srb_starHeight="30dp"
                app:srb_starPadding="4dp"
                app:srb_stepSize="1"
                app:srb_isIndicator="false"
                app:srb_clickable="true"
                app:srb_scrollable="true"
                app:srb_clearRatingEnabled="false"
                app:srb_drawableEmpty="@drawable/ic_rate2"
                app:srb_drawableFilled="@drawable/ic_rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll1">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnVote"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/rate"
                    android:textColor="@color/text_rate_rate"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_medium"
                    android:background="@drawable/bg_btn_rate"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnCancal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_exit_rate"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:paddingVertical="15dp"
                    android:fontFamily="@font/roboto_medium"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
