<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_dialog_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bevietnampro_medium"
                android:text="@string/delete"
                android:textColor="#fc3d3d"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_delete_dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:gravity="center"
                android:text="@string/do_you_want_to_delete_selected_project"
                android:textColor="#66FFFFFF"
                android:textSize="14sp"
                android:fontFamily="@font/bevietnampro_regular"
                app:layout_constraintTop_toBottomOf="@id/imv"
                android:layout_marginTop="12dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDelete"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bevietnampro_medium"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                android:background="@drawable/bg_card_border3"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDelete"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingVertical="12dp"
                android:textColor="@color/white"
                android:fontFamily="@font/bevietnampro_medium"
                android:textSize="16sp"
                android:text="@string/tv_cancel"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>