<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llChooseData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/imvBack"
            app:layout_constraintStart_toEndOf="@id/imvBack"
            app:layout_constraintTop_toTopOf="@id/imvBack">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fontFamily="@font/be_vietnapro_bold"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxWidth="120dp"
                android:singleLine="true"
                android:text="@string/recent"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvArrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_card_border7"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/llChooseData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/llChooseData"
            android:alpha="0.4">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/bevietnampro_medium"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:text="@string/apply"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/llChooseData">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVideos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bevietnampro_medium"
                android:gravity="center"
                android:text="@string/videos"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bevietnampro_medium"
                android:gravity="center"
                android:text="@string/photos"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll1">

            <View
                android:id="@+id/imvTrue"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_card_border8" />

            <View
                android:id="@+id/imvFalse"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_card_border9" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvVideo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingBottom="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingBottom="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:background="@drawable/bg_card_border10"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/bevietnampro_medium"
                android:text="@string/select_at_least_1_item"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/btnClearAll"
                app:layout_constraintStart_toStartOf="parent"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/btnClearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_card_border11"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="6dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/tvSelect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvSelect">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_delete" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/bevietnampro_medium"
                    android:text="@string/clear_all"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSelect" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNoVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:fontFamily="@font/bevietnampro_light"
                android:gravity="center"
                android:text="@string/no_videos_have_been_selected_yet"
                android:textColor="#80FFFFFF"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="80dp"
                tools:layout_editor_absoluteX="24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llSelectFolder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imvBack"
            android:background="#111111"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvSelectFolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>